--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,13 @@ Jinja2==3.1.2
 joblib==1.2.0
 MarkupSafe==2.1.2
 numpy==1.24.2
+pandas==1.5.3
 psycopg2-binary==2.9.5
+python-dateutil==2.8.2
+pytz==2022.7.1
 scikit-learn==1.2.1
 scipy==1.10.1
+six==1.16.0
 SQLAlchemy==2.0.4
 threadpoolctl==3.1.0
 typing_extensions==4.5.0
